        o 'verification'  : -) now it is fully compatible with R-based models and allows parallelisation
                            -) simulations for each parameter sets are now returned in the new 'sims' lement of the output object.
        o 'quant2ecdf'    : Detection of 'matrix' and 'data.frame' class for its first argument is now made with the 'is' function, in order to be compatible with R 4.0.0
        o 'read_out'      : -) If 'MinMax' is not provided, it is read from the 'PSO_logfile.txt' file
                            -) Much faster now: it uses data.table:fread instead of 'read.table'
        o 'read_results'  : -) If 'MinMax' is not provided, it is read from the 'PSO_logfile.txt' file
                            -) Much faster now: thanks to the improvement in 'read_out'
        o 'plot_results'  : -) If 'MinMax' is not provided, it is read from the 'PSO_logfile.txt' file
                            -) Much faster now: thanks to the improvement in 'read_out'
                          : testing if 'zoo' package is installed is now optmised, replacing 'if ( !is.na( match("zoo", installed.packages()[,"Package"] ) ) )' by '( length(find.package("zoo", quiet=TRUE)) == 0 )'
        o 'plot_2parOF'   : testing if 'scatter3d' package is installed is now optmised, replacing 'if ( !is.na( match("scatter3d", installed.packages()[,"Package"] ) ) )' by '( length(find.package("scatter3d", quiet=TRUE)) == 0 )'
        o 'hydromod'      : testing if 'hydroGOF' package is installed is now optmised, replacing 'if ( !is.na( match("hydroGOF", installed.packages()[,"Package"] ) ) )' by '( length(find.package("hydroGOF", quiet=TRUE)) == 0 )'
        o 'plot_out'      : testing if 'hydroGOF' package is installed is now optmised, replacing 'if ( !is.na( match("hydroGOF", installed.packages()[,"Package"] ) ) )' by '( length(find.package("hydroGOF", quiet=TRUE)) == 0 )'
        o DESCRIPTION     : -) 'knitr' and 'rmarkdown' were added to allow building the vignettes